# adex

./: 31.08.2025 просрочка.xlsx  garovli.ipynb  garovsiz.ipynb  main.ipynb  main.py  pyproject.toml
data/: biroylikgarovlilar.csv  biroylikgarovlilar_redone.csv  biroylikgarovsizlar.csv
report/: avg_rate_by_region.csv  brand_sum.csv  by_district_top20.csv  by_month.csv  by_region_sum_count_avg.csv  decile_counts.csv  monthly.csv  sum_amount_by_region.csv  top_borrowers.csv
reports/: loans_sweetviz.html  missingness.csv  numeric_summary.csv  region_sum.csv  top_correlations.csv
reports/cleaned_csv/: Активные_кредиты_5.clean.csv  Лист1.clean.csv
