[project]
name = "adex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.7",
    "matplotlib>=3.9.2",
    "notebook>=7.4.5",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "seaborn>=0.13.2",
    "sweetviz>=2.3.1",
]
